<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo"
    android:screenOrientation="portrait"
    tools:context=".views.Loguin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        app:srcCompat="@mipmap/gasolina" />

    <EditText
        android:id="@+id/nomeLoguin"
        android:layout_width="235dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/amarelolatao" />

    <Button
        android:id="@+id/bEntrar"
        android:layout_width="94dp"
        android:layout_height="47dp"
        android:layout_marginEnd="20dp"
        android:text="Entrar >"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaLoguin"
        app:layout_constraintVertical_bias="0.928"
        android:background="@color/azullatao"
        android:textColor="@color/amarelolatao"/>

    <EditText
        android:id="@+id/senhaLoguin"
        android:layout_width="235dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeLoguin"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/amarelolatao" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="Completa Aí"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/amarelolatao"/>

</androidx.constraintlayout.widget.ConstraintLayout>