<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:background="@color/corFundo"
    tools:context=".views.Menu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@mipmap/gasolina" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Menu"
        android:textColor="@color/amarelolatao"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bListVeic"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="71dp"
        android:background="@color/azullatao"
        android:text="Listar Veiculos"
        android:textColor="@color/amarelolatao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/bCadasVeic"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="300dp"
        android:text="Cadastrar Veiculos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bListVeic"
        android:background="@color/azullatao"
        android:textColor="@color/amarelolatao"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/bListAbast"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="323dp"
        android:text="Listar Abastecimentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bCadasVeic"
        android:background="@color/azullatao"
        android:textColor="@color/amarelolatao"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/bCadasAbast"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="323dp"
        android:text="Cadastrar Abastecimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bListAbast"
        android:background="@color/azullatao"
        android:textColor="@color/amarelolatao"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/bRelatorios"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="323dp"
        android:text="Relatórios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bCadasAbast"
        android:background="@color/azullatao"
        android:textColor="@color/amarelolatao"
        android:textSize="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>